<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.dev.insu.uwagakanar.SignIn">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/roboto_light"
        android:text="@string/zaloguj"
        android:textColor="#fff"
        android:textSize="18dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="300dp"
        android:layout_height="142dp"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="15dp">

        <EditText
            android:id="@+id/loginT"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:hint="@string/login"
            android:inputType="textWebEmailAddress"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#888" />

        <EditText
            android:id="@+id/hasloT"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="70dp"
            android:background="@null"
            android:hint="@string/haslo"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#888" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/okB"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/card1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="OK"
        android:textColor="#888"
        android:textSize="20sp" />
</RelativeLayout>