<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context="com.dev.insu.uwagakanar.SignUp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/imageView"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/zarejestruj"
        android:textColor="#fff"
        android:textSize="18dp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card1"
        android:layout_width="300dp"
        android:layout_height="242dp"
        android:layout_below="@+id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="15dp">
        <EditText
            android:id="@+id/loginT"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:background="@null"
            android:hint="@string/login"
            android:inputType="textWebEmailAddress"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#888" />
        <EditText
            android:id="@+id/hasloT"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="60dp"
            android:background="@null"
            android:hint="@string/haslo"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#888" />

        <EditText
            android:id="@+id/imieT"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="120dp"
            android:background="@null"
            android:hint="@string/imie"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="#888" />




        <Spinner
            android:id="@+id/spinner"
            android:layout_width="220dp"
            android:layout_height="60dp"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="50dp"
            android:pointerIcon="context_menu"
            android:scrollIndicators="top"
            android:spinnerMode="dialog"
            android:textAlignment="center" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/okB"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_below="@id/card1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:text="OK"
        android:textColor="#888"
        android:textSize="20sp" />

</RelativeLayout>