<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context="com.dev.insu.uwagakanar.HomeScreen">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/toolbar" />

    <ImageView
        android:id="@+id/top_bar"
        android:layout_width="340dp"
        android:layout_height="72dp"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/top_bar" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/roboto_light"
        android:text="user"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20dp" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@id/toolbar"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/zdj" />

    <TextView
        android:id="@+id/miasto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-15dp"
        android:fontFamily="@font/roboto_light"
        android:text="City"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ostrzezenia"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_below="@id/miasto">

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ostrzezenia">

        <TextView
            android:id="@+id/ostrzez"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:text="@string/ostrzez"
            android:textAlignment="center"
            android:textSize="18sp" />

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ostrzez"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/btnMiasto"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:background="@null"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/miasto"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/btnLinia"
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/btnMiasto"
                    android:background="@null"
                    android:fontFamily="@font/roboto_light"
                    android:inputType="number"
                    android:hint="@string/linia"
                    android:textAlignment="center" />

                <android.support.v7.widget.AppCompatEditText
                    android:layout_width="300dp"
                    android:layout_height="60dp"
                    android:layout_below="@id/btnLinia"
                    android:background="@null"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/godzina"
                    android:inputType="time"
                    android:textAlignment="center" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_below="@id/card1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/ok" />

    </RelativeLayout>

</RelativeLayout>